# Brolier-Disease-Prediction

./: README.md
client/: index.html  package-lock.json
client/src/: App.css  App.tsx  CasesPage.tsx  FlocksPage.tsx  ModellingPage.tsx  ReportsPage.tsx  SettingsPage.tsx
server/: Broiler_Disease_Report.xlsx  app.py  app_data.sqlite3  manage.py  pyproject.toml  requirements.txt  train.py
