[project]
name = "poultry-disease-backend"
version = "0.1.0"
description = "FastAPI backend for the poultry disease classifier"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "tensorflow>=2.21",
    "numpy",
    "Pillow",
    "python-multipart",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
